// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssistiveText Filter DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center"
>
  <div
    className="slds-grow"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <button
      className="slds-button_reset slds-grow slds-has-blur-focus"
      id="sample-panel-filtering-show-me"
      onClick={[Function]}
      onFocus={null}
      onMouseEnter={null}
      onMouseLeave={null}
      tabIndex="0"
    >
      <span
        className="slds-assistive-text"
      >
        editFilter-TEST
      </span>
      <p
        className="slds-text-body_small"
      >
        Show Me
      </p>
      <p>
        All Products
      </p>
    </button>
  </div>
  <button
    className="slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small"
    disabled={false}
    onClick={[Function]}
    title="removeFilter-TEST"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon_hint"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      removeFilter-TEST
    </span>
  </button>
</div>
`;

exports[`AssistiveText Filter HTML Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">editFilter-TEST</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"removeFilter-TEST\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">removeFilter-TEST</span></button>
</div>"
`;

exports[`AssistiveText Filter HTML Snapshot 2`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"Remove Filter: Show Me All Products\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove Filter: Show Me All Products</span></button>
</div>"
`;

exports[`Error Filter Base Snapshot DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center slds-has-error"
>
  <div
    className="slds-grow"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <button
      aria-describedby="sample-panel-filtering-show-me-error"
      className="slds-button_reset slds-grow slds-has-blur-focus"
      id="sample-panel-filtering-show-me"
      onClick={[Function]}
      onFocus={null}
      onMouseEnter={null}
      onMouseLeave={null}
      tabIndex="0"
    >
      <span
        className="slds-assistive-text"
      >
        Edit filter:
      </span>
      <p
        className="slds-text-body_small"
      >
        Show Me
      </p>
      <p>
        All Products
      </p>
    </button>
  </div>
  <button
    className="slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small"
    disabled={false}
    onClick={[Function]}
    title="Remove Filter: Show Me All Products"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon_hint"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove Filter: Show Me All Products
    </span>
  </button>
</div>
`;

exports[`Error Filter Base Snapshot HTML Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center slds-has-error\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" aria-describedby=\\"sample-panel-filtering-show-me-error\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"Remove Filter: Show Me All Products\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove Filter: Show Me All Products</span></button>
</div>"
`;

exports[`Filter Base Snapshot DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center"
>
  <div
    className="slds-grow"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <button
      className="slds-button_reset slds-grow slds-has-blur-focus"
      id="sample-panel-filtering-show-me"
      onClick={[Function]}
      onFocus={null}
      onMouseEnter={null}
      onMouseLeave={null}
      tabIndex="0"
    >
      <span
        className="slds-assistive-text"
      >
        Edit filter:
      </span>
      <p
        className="slds-text-body_small"
      >
        Show Me
      </p>
      <p>
        All Products
      </p>
    </button>
  </div>
  <button
    className="slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small"
    disabled={false}
    onClick={[Function]}
    title="Remove Filter: Show Me All Products"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon_hint"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove Filter: Show Me All Products
    </span>
  </button>
</div>
`;

exports[`Filter Base Snapshot HTML Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"Remove Filter: Show Me All Products\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove Filter: Show Me All Products</span></button>
</div>"
`;

exports[`Filter Base with custom className Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center MY_CUSTOM_CLASS_NAME\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"Remove Filter: Show Me All Products\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove Filter: Show Me All Products</span></button>
</div>"
`;

exports[`LockedFilter Base Snapshot DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center slds-is-locked"
>
  <button
    className="slds-button_reset slds-grow slds-has-blur-focus"
    disabled={true}
  >
    <p
      className="slds-text-body_small"
    >
      Show Me
    </p>
    <p>
      All Products
    </p>
  </button>
</div>
`;

exports[`LockedFilter Base Snapshot HTML Snapshot 1`] = `"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center slds-is-locked\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" disabled=\\"\\"><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>"`;

exports[`NewFilter Base Snapshot DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center slds-is-new"
>
  <div
    className="slds-grow"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <button
      className="slds-button_reset slds-grow slds-has-blur-focus"
      id="sample-panel-filtering-show-me"
      onClick={[Function]}
      onFocus={null}
      onMouseEnter={null}
      onMouseLeave={null}
      tabIndex="0"
    >
      <span
        className="slds-assistive-text"
      >
        Edit filter:
      </span>
      <p
        className="slds-text-body_small"
      >
        Show Me
      </p>
      <p>
        All Products
      </p>
    </button>
  </div>
  <button
    className="slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small"
    disabled={false}
    onClick={[Function]}
    title="Remove Filter: Show Me All Products"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon_hint"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove Filter: Show Me All Products
    </span>
  </button>
</div>
`;

exports[`NewFilter Base Snapshot HTML Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center slds-is-new\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
  <button
    class=\\"slds-button slds-button_icon slds-button_icon-bare slds-button_icon-small\\" title=\\"Remove Filter: Show Me All Products\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon_hint\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Remove Filter: Show Me All Products</span></button>
</div>"
`;

exports[`Permanant Filter Base Snapshot DOM Snapshot 1`] = `
<div
  className="slds-filters__item slds-grid slds-grid_vertical-align-center"
>
  <div
    className="slds-grow"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <button
      className="slds-button_reset slds-grow slds-has-blur-focus"
      id="sample-panel-filtering-show-me"
      onClick={[Function]}
      onFocus={null}
      onMouseEnter={null}
      onMouseLeave={null}
      tabIndex="0"
    >
      <span
        className="slds-assistive-text"
      >
        Edit filter:
      </span>
      <p
        className="slds-text-body_small"
      >
        Show Me
      </p>
      <p>
        All Products
      </p>
    </button>
  </div>
</div>
`;

exports[`Permanant Filter Base Snapshot HTML Snapshot 1`] = `
"<div class=\\"slds-filters__item slds-grid slds-grid_vertical-align-center\\">
  <div class=\\"slds-grow\\" style=\\"display:inline-block\\"><button class=\\"slds-button_reset slds-grow slds-has-blur-focus\\" id=\\"sample-panel-filtering-show-me\\" tabindex=\\"0\\"><span class=\\"slds-assistive-text\\">Edit filter:</span><p class=\\"slds-text-body_small\\">Show Me</p><p>All Products</p></button></div>
</div>"
`;
